# pySORB

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  requirements.txt  setup.py
c_files/: ERRORS.h  FREUNDLICH.h  GNUPLOT.h  INCLUDEFILE.h  JENSEN_SEATON.h  KELLER_STAUDT_TOTH.h  LANGMUIR.h  REDLICH_PETERSON.h  SIPS.h  TEMP_DEPENDENCE.h  TOTH.h  UNILAN.h  nelder_mead.h  nmsimplex.h  test.cpp
docs/: Doxyfile.in  Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_autosummary/: pysorb.Adsorbent.__init__.rst  pysorb.BaseIsothermModel.rst  pysorb.EmpiricalIsotherms.get_deviation.rst  pysorb.EmpiricalIsotherms.get_loadings.rst  pysorb.Fluid.name.rst  pysorb.Fluid.rst  pysorb.PotentialTheoryModels.__init__.rst  pysorb.PotentialTheoryModels.get_deviation.rst  pysorb.VacancySolutionMethod.get_deviation.rst
docs/_autosummary/_generate/: pysorb.Adsorbent.rst  pysorb.BaseIsothermModel.rst  pysorb.EmpiricalIsotherms.rst  pysorb.Fluid.rst  pysorb.PotentialTheoryModels.rst  pysorb.VacancySolutionMethod.rst
docs/fitting/: empirical.md
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/examples/: classic_isotherms.md.txt
docs/html/_sources/quick_start/: fitting.md.txt  installation.md.txt
docs/html/examples/: classic_isotherms.html
docs/html/pysorb/: api.html
docs/html/pysorb/_autosummary/: pysorb.Adsorbent.__init__.html  pysorb.Adsorbent.atomic_density.html  pysorb.Adsorbent.html  pysorb.Adsorbent.name.html  pysorb.Adsorbent.solid_diameter.html  pysorb.BaseIsothermModel.__init__.html  pysorb.BaseIsothermModel.get_deviation.html  pysorb.BaseIsothermModel.get_loading.html  pysorb.BaseIsothermModel.get_loadings.html  pysorb.BaseIsothermModel.get_mixture_loading.html  pysorb.BaseIsothermModel.html  pysorb.EmpiricalIsotherms.__init__.html  pysorb.EmpiricalIsotherms.get_deviation.html  pysorb.EmpiricalIsotherms.get_loading.html  pysorb.EmpiricalIsotherms.get_loadings.html  pysorb.EmpiricalIsotherms.get_mixture_loading.html  pysorb.EmpiricalIsotherms.html  pysorb.Fluid.__init__.html  pysorb.Fluid.accentric_factor.html  pysorb.Fluid.critical_compressibility.html  pysorb.Fluid.critical_pressure.html  pysorb.Fluid.critical_temperature.html  pysorb.Fluid.html  pysorb.Fluid.lennard_jonnes_diameter.html  pysorb.Fluid.name.html  pysorb.PotentialTheoryModels.__init__.html  pysorb.PotentialTheoryModels.get_deviation.html  pysorb.PotentialTheoryModels.get_loading.html  pysorb.PotentialTheoryModels.get_loadings.html  pysorb.PotentialTheoryModels.get_mixture_loading.html  pysorb.PotentialTheoryModels.html  pysorb.VacancySolutionMethod.__init__.html  pysorb.VacancySolutionMethod.get_deviation.html  pysorb.VacancySolutionMethod.html  (+4 more)
docs/html/quick_start/: deviation_equations.html  equations_of_state.html  fitting.html  installation.html
docs/pysorb/: api.rst
docs/pysorb/_autosummary/: pysorb.Adsorbent.name.rst  pysorb.Adsorbent.rst  pysorb.BaseIsothermModel.__init__.rst  pysorb.BaseIsothermModel.get_loadings.rst  pysorb.EmpiricalIsotherms.__init__.rst  pysorb.EmpiricalIsotherms.rst  pysorb.Fluid.__init__.rst  pysorb.Fluid.critical_temperature.rst  pysorb.Fluid.lennard_jonnes_diameter.rst  pysorb.PotentialTheoryModels.get_mixture_loading.rst  pysorb.VacancySolutionMethod.__init__.rst  pysorb.VacancySolutionMethod.get_loading.rst  pysorb.VacancySolutionMethod.get_loadings.rst  pysorb.VacancySolutionMethod.get_mixture_loading.rst  pysorb.VacancySolutionMethod.rst
docs/quick_start/: deviation_equations.md  equations_of_state.md  fitting.md
docs/source/: conf.py  index.rst
isotherms/: module.cpp
isotherms/c_cpp/: CMakeLists.txt
isotherms/c_cpp/src/: _isotherms.h  classic_isotherm.h  classic_isotherms.cpp  deviation_functions.cpp
isotherms/cpp/src/: _isotherms.cpp  classic_isotherm.h  classic_isotherms.cpp  classic_isotherms.h  deviation_functions.h
pysorb/: module.cpp
pysorb/cpp/: CMakeLists.txt
pysorb/cpp/isotherms/: _base_isotherm_model.cpp  _base_isotherm_model.h  data_classes.h  deviation_functions.cpp  deviation_functions.h  utils.cpp  utils.h
pysorb/cpp/isotherms/empirical/: CMakeLists.txt  _isotherms.cpp  _isotherms.h  classic_isotherms.cpp  classic_isotherms.h
pysorb/cpp/isotherms/equations_of_state/: eos.h  eos_helper.cpp  pr77.cpp  pr77_peneloux.cpp  srk.cpp  srk.h  srk_peneloux.cpp  srk_peneloux.h
pysorb/cpp/isotherms/optimization_algorithms/: bisection.cpp  brent.cpp  brent.h  fmin.h  nelder_mead.h  nmsimplex.h
pysorb/cpp/isotherms/pta/: adsorption_potentials.cpp  helpers.cpp  helpers.h  pta.cpp  pta.h  pta_helper.cpp  pta_helper.h  pta_mixture.cpp  pta_mixture.h  pta_pure.cpp  pta_pure.h  pta_solver.h
pysorb/cpp/isotherms/vsm/: vsm.cpp  vsm.h
pysorb/cpp/isotherms/vsm/activity_coefficients/: flory_huggins.cpp  flory_huggins.h  langmuir.h  nrtl.cpp  nrtl.h  wilson.cpp  wilson.h
pysorb/cpp/tests/: CMakeLists.txt  test_classic_isotherms.cpp  test_pta.cpp  test_vsm.cpp
src/: pysorb.cpp
src/cpp/: CMakeLists.txt
src/cpp/isotherms/: _base_isotherm_model.cpp  _base_isotherm_model.h  _base_isotherm_module.h  data_classes.h  data_classes_module.h  utils.cpp
src/cpp/isotherms/empirical/: classic_isotherms.cpp  classic_isotherms.h  classic_isotherms_module.h
src/cpp/isotherms/empirical/files/: _isotherms.cpp  _isotherms.h  extended_isotherms.cpp  extended_isotherms.h
src/cpp/isotherms/equations_of_state/: eos.h  eos_helper.h  pr77.h  pr77_peneloux.h
src/cpp/isotherms/optimization_algorithms/: bisection.h  fmin.cpp  nelder_mead.cpp  nelder_mead.h
src/cpp/isotherms/pta/: pta.h  pta_module.h
src/cpp/isotherms/pta/files/: adsorption_potentials.h  pta_mixture.h  pta_pure.cpp  pta_pure.h  pta_solver.cpp
src/cpp/isotherms/vsm/: vsm.h  vsm_module.h
src/cpp/isotherms/vsm/activity_coefficients/: flory_huggins.h  module.cpp  nrtl.h  wilson.h
src/cpp/tests/: CMakeLists.txt  test_pta.cpp  test_vsm.cpp
tests/: test_data_classes.py  test_pta.py  test_pta_mixtures.py
(+15 files in other folders)
